--- a/user_profile.html
+++ b/user_profile.html
@@ -20,23 +20,23 @@
 
 <form class="usuario" action="user_profile.html" method="POST">
     <label for="name">Nome:</label>
-    <input type="text" name="name" id="name" value="nome de usuario">
+    <input class="pf" type="text" name="name" id="name" value="nome de usuario">
     
     <label for="phone">Telefone:</label>
-    <input type="text" name="phone" id="phone" value="telefone">
+    <input class="pf" type="text" name="phone" id="phone" value="telefone">
     
     <form id="cartaoForm">
         <label for="nomeTitular">Nome do Titular do Cartão:</label>
-        <input type="text" id="nomeTitular" required>
+        <input class="pf" type="text" id="nomeTitular" required>
 
         <label for="numeroCartao">Número do Cartão:</label>
-        <input type="text" id="numeroCartao" required>
+        <input class="pf" type="text" id="numeroCartao" required>
 
         <label for="validade">Validade:</label>
-        <input type="month" id="validade" required>
+        <input class="pf" type="month" id="validade" required>
 
         <label for="cvv">CVV:</label>
-        <input type="number" id="cvv" required>
+        <input class="pf" type="number" id="cvv" required>
 
         <button type="submit">Cadastrar</button>
     </form>
